Bug #25408 | 5.1 Can't compile on Windows | ||
---|---|---|---|
Submitted: | 4 Jan 2007 10:46 | Modified: | 15 Feb 2007 4:33 |
Reporter: | Miguel Solorzano | Email Updates: | |
Status: | Closed | Impact on me: | |
Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
Version: | 5.1BK | OS: | Windows (Windows) |
Assigned to: | Iggy Galarza | CPU Architecture: | Any |
[4 Jan 2007 10:46]
Miguel Solorzano
[4 Jan 2007 14:22]
Tonci Grgin
In adition to this, myisam project fails to build (only Debug!) thus resulting in overall failure as there is no myisam.lib in storage\myisam\debug... Release builds ok. Build started: Project: myisam, Configuration: Debug|Win32 ... mi_packrec.c .\mi_packrec.c(596) : error C2143: syntax error : missing ';' before 'const' .\mi_packrec.c(596) : error C2275: 'uint' : illegal use of this type as an expression ...\include\config-win.h(128) : see declaration of 'uint' .\mi_packrec.c(596) : error C2146: syntax error : missing ';' before identifier '_db_level_' .\mi_packrec.c(596) : error C2065: '_db_level_' : undeclared identifier .\mi_packrec.c(596) : error C2143: syntax error : missing ';' before 'type' .\mi_packrec.c(596) : error C2065: '_db_func_' : undeclared identifier .\mi_packrec.c(596) : error C2065: '_db_file_' : undeclared identifier .\mi_packrec.c(596) : error C2065: '_db_framep_' : undeclared identifier
[12 Jan 2007 21:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18077 ChangeSet@1.2386, 2007-01-12 15:37:13-05:00, iggy@alf. +1 -0 Bug#25408 5.1 Can't compile on Windows - DBUG_ENTER must be called before assignment on Windows and Netware.
[14 Feb 2007 15:41]
Chad MILLER
Available in 5.1.16-beta.
[15 Feb 2007 4:33]
Paul DuBois
No changelog entry needed.