Bug#25408 5.1 Can't compile on Windows - DBUG_ENTER must be called before assignment on Windows and Netware.